--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <div> <a href="" itemprop="URL"> Kolbotn Open presented by BirdGolf</a></div>
     <div> <a href="" itemprop="URL"> Our cool story</a></div>
     <div> <a href="" itemprop="URL"> Our excellent store</a></div>
-
+    <div> <a href="" itemprop="URL"> Contact</a></div>
     
 
     </script>
