Added images and formating

--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,38 @@
       crossorigin="">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
+    <style>
+      .content {
+        max-width: 200px;
+        margin: auto;
+      }
 
+      .demo div {
+          float: left;
+          clear: none;
+          margin-right: 100px;
+      }
+      </style>
   </head>
 
   <body>
-    <h1> We are Bird </h1>
-    <div> <a href="" itemprop="URL"> Kolbotn Open presented by BirdGolf</a></div>
-    <div> <a href="" itemprop="URL"> Our cool story</a></div>
-    <div> <a href="" itemprop="URL"> Our excellent store</a></div>
-    <div> <a href="" itemprop="URL"> Contact</a></div>
+
+    <h1 style=margin-left:700px> We are Bird  <img src="img/logo.jpg" alt="logo" width="50" height="60" > </h1>
+    <br>
+    <br>
+    <div class="demo" style=margin-left:300px>
+      <div> <a href="" itemprop="URL"> Kolbotn Open presented by BirdGolf</a></div>
+      <div> <a href="" itemprop="URL"> Our cool story</a></div>
+      <div> <a href="" itemprop="URL"> Our excellent store</a></div>
+      <div> <a href="" itemprop="URL"> Contact</a></div>
+    </div>
+    <br>
+
+    <div style=float:unsets;margin-left:350px> 
+        <img src="img/cover.jpg" alt="cover" width="650" height="1000">
+    </div>
+
     
-
-    </script>
-
+    
   </body>
 </html>
