Added resonsive settings all

--- a/public/index.html
+++ b/public/index.html
@@ -22,17 +22,17 @@
       .demo div {
           float: left;
           clear: none;
-          margin-right: 100px;
+          margin-right: 10%;
       }
       </style>
   </head>
 
   <body>
 
-    <h1 style=margin-left:700px> We are Bird  <img src="img/logo.jpg" alt="logo" width="50" height="60" > </h1>
+    <h1 style=margin-left:45%> We are Bird  <img src="img/logo.jpg" alt="logo" width="7%";height="auto" > </h1>
     <br>
     <br>
-    <div class="demo" style=margin-left:300px>
+    <div class="demo" style=margin-left:15%>
       <div> <a href="" itemprop="URL"> Kolbotn Open presented by BirdGolf</a></div>
       <div> <a href="" itemprop="URL"> Our cool story</a></div>
       <div> <a href="" itemprop="URL"> Our excellent store</a></div>
